--- a/projects/graphic/CMakeLists.txt
+++ b/projects/graphic/CMakeLists.txt
@@ -9,6 +9,6 @@ FILE(GLOB graphic_sources code/*.cc)
 SET(files_graphic ${graphic_headers} ${graphic_sources})
 SOURCE_GROUP("graphic" FILES ${files_graphic})
 
-ADD_EXECUTABLE(graphic ${files_graphic} "code/MeshResource.h")
+ADD_EXECUTABLE(graphic ${files_graphic} "code/MeshResource.h" "code/MeshResource.cpp")
 TARGET_LINK_LIBRARIES(graphic core render)
 ADD_DEPENDENCIES(graphic core render)
