fix all errors and Cube seens fine

--- a/engine/render/CMakeLists.txt
+++ b/engine/render/CMakeLists.txt
@@ -13,6 +13,7 @@ SET(files_render_display
 	stb_image.h
 	TextureResource.h
 	TextureResource.cpp
+	meshResource.cc
 	)
 SOURCE_GROUP("display" FILES ${files_render_display})
 
