work on shaderResource and Graph

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -8,8 +8,10 @@ TARGET_LINK_LIBRARIES(engine INTERFACE ${OPENGL_LIBS})
 ADD_SUBDIRECTORY(core)
 ADD_SUBDIRECTORY(render)
 ADD_SUBDIRECTORY(texture)
-TARGET_LINK_LIBRARIES(engine INTERFACE core render texture)
+ADD_SUBDIRECTORY(shaders)
+TARGET_LINK_LIBRARIES(engine INTERFACE core render texture shaders)
 
 SET_TARGET_PROPERTIES(core PROPERTIES FOLDER "engine")
 SET_TARGET_PROPERTIES(render PROPERTIES FOLDER "engine")
 SET_TARGET_PROPERTIES(texture PROPERTIES FOLDER "engine")
+SET_TARGET_PROPERTIES(shaders PROPERTIES FOLDER "engine")
