--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -9,9 +9,12 @@ ADD_SUBDIRECTORY(core)
 ADD_SUBDIRECTORY(render)
 ADD_SUBDIRECTORY(texture)
 ADD_SUBDIRECTORY(shaders)
-TARGET_LINK_LIBRARIES(engine INTERFACE core render texture shaders)
+ADD_SUBDIRECTORY(OBJFiles)
+TARGET_LINK_LIBRARIES(engine INTERFACE core render texture shaders OBJFiles)
 
 SET_TARGET_PROPERTIES(core PROPERTIES FOLDER "engine")
 SET_TARGET_PROPERTIES(render PROPERTIES FOLDER "engine")
 SET_TARGET_PROPERTIES(texture PROPERTIES FOLDER "engine")
 SET_TARGET_PROPERTIES(shaders PROPERTIES FOLDER "engine")
+SET_TARGET_PROPERTIES(OBJFiles PROPERTIES FOLDER "engine")
+
