--- a/engine/render/CMakeLists.txt
+++ b/engine/render/CMakeLists.txt
@@ -15,12 +15,14 @@ SET(files_render_display
 	TextureResource.h
 	TextureResource.cpp 
 	WindowWrapper.h 
-       	ShaderResource.cpp 
-       	ShaderResource.h
-      	GraphicsNode.cpp
+    ShaderResource.cpp 
+    ShaderResource.h
+    GraphicsNode.cpp
 	GraphicsNode.h
-        PointLightSourceNode.cpp
-        PointLightSourceNode.h
+    PointLightSourceNode.cpp
+    PointLightSourceNode.h
+	DirectionalLight.cpp
+	DirectionalLight.h
 
 )
 
