--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -10,7 +10,7 @@ ADD_SUBDIRECTORY(render)
 ADD_SUBDIRECTORY(texture)
 ADD_SUBDIRECTORY(shaders)
 ADD_SUBDIRECTORY(OBJFiles)
-TARGET_LINK_LIBRARIES(engine INTERFACE core render texture shaders OBJFiles)
+TARGET_LINK_LIBRARIES(engine INTERFACE core render texture shaders)
 
 SET_TARGET_PROPERTIES(core PROPERTIES FOLDER "engine")
 SET_TARGET_PROPERTIES(render PROPERTIES FOLDER "engine")
